--- a/SrinivasToolkit/App.config
+++ b/SrinivasToolkit/App.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <connectionStrings>
+    <add name="connectToolkit" connectionString="data source=ADILAKSHMI;Initial Catalog=SrinivasToolkit;User id=sa;Password=redhat" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
 </configuration>
