--- a/SrinivasToolkit/SrinivasToolkit.csproj
+++ b/SrinivasToolkit/SrinivasToolkit.csproj
@@ -35,6 +35,9 @@
     <Reference Include="Aspose.Pdf">
       <HintPath>C:\Users\SrinivasaRao\Desktop\WinFormsTest\bin\Debug\Aspose.Pdf.dll</HintPath>
     </Reference>
+    <Reference Include="ICSharpCode.SharpZipLib">
+      <HintPath>C:\Users\SrinivasaRao\Downloads\Compressed\SharpZipLib_0860_Bin\net-20\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Microsoft.VisualBasic.PowerPacks.Vs, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
